Update mongo url

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 JWT_SECRET = 'Happyisagoodb$oy'
-MONGO_URI = "mongodb+srv://happydobariya214:Happy0101@inotebook-db.oinqi.mongodb.net/"
+MONGO_URI = "mongodb+srv://happydobariya214:Happy0101@inotebook-db.oinqi.mongodb.net/test"
